--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -63,3 +63,11 @@
   border-radius: 100rem;
   font-size: 0.9rem;
 }
+
+
+.headerimage{
+  max-width: 2rem;
+  border-radius: 100%;
+  background-color: red;
+  padding: 2px;
+}
