--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  font-size: 18px;
+
 }
 
 body {
@@ -15,4 +15,8 @@ body {
 
 a {
   text-decoration: none;
+}
+
+#root{
+  font-size: 18px;
 }
